@@ -1,3 +1,12 @@
+2003-03-04  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* capplets/network/gnome-network-preferences.c:
+	(proxy_mode_radiobutton_clicked_cb):
+        Set "system/proxy/use_http_proxy" GConf key
+	when Manual or
+        Auto is selected.
+
+
 2003-02-22   Laurent Dhima  <laurenti@alblinux.net>
 	
 	* configure.in: Added 'sq' to ALL_LINGUAS
